--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=test;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=test;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
