--- a/GenericApi.csproj
+++ b/GenericApi.csproj
@@ -25,5 +25,6 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.1" />
+    <PackageReference Include="UAParser" Version="3.1.47" />
   </ItemGroup>
 </Project>
