--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,8 @@
     "Audience": "GenericApiUsers",
     "AccessTokenExpirationMinutes": 5,
     "RefreshTokenExpirationDays": 7
+  },
+  "PasswordHashing": {
+    "SaltRounds": 12
   }
 }
