--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=test;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=simplevia_common;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "A7d!kL9@xPq2#zVb6wT1$eR8sYc3^uJ0",
+    "Issuer": "GenericApi",
+    "Audience": "GenericApiUsers",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationDays": 7
+  },
+  "PasswordHashing": {
+    "SaltRounds": 12
+  }
 }
