--- a/GenericApi.csproj
+++ b/GenericApi.csproj
@@ -27,5 +27,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.1" />
     <PackageReference Include="UAParser" Version="3.1.47" />
+    <!-- For SQL Server Management Objects (SMO) and related libraries -->
+    <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="170.8.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
   </ItemGroup>
 </Project>
