--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,22 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=simplevia_common;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "A7d!kL9@xPq2#zVb6wT1$eR8sYc3^uJ0",
+    "Issuer": "GenericApi",
+    "Audience": "GenericApiUsers",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationDays": 7
+  },
+  "PasswordHashing": {
+    "SaltRounds": 12
   }
 }
