--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=simplevia_common;Trusted_Connection=True;"
+    "DefaultConnection": "Server=AL\\SQLEXPRESS;Database=simplevia_common;Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
