--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=URQUICO\\SQLEXPRESS;Database=simplevia_common;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=URQUICO\\SQLEXPRESS;Database=generic_test;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
