feature: added sp for user login validation and token creation

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=URQUICO\\SQLEXPRESS;Database=generic_test;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=URQUICO\\SQLEXPRESS;Database=simplevia_common;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -13,7 +13,7 @@
     "Key": "A7d!kL9@xPq2#zVb6wT1$eR8sYc3^uJ0",
     "Issuer": "GenericApi",
     "Audience": "GenericApiUsers",
-    "AccessTokenExpirationMinutes": 5,
+    "AccessTokenExpirationMinutes": 30,
     "RefreshTokenExpirationDays": 7
   },
   "PasswordHashing": {
